Add Delete Sensor method
